[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogip-tools"
authors = [{name = "COGIP Team", email = "cogip35@gmail.com"}]
version = "1.0.0"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Documentation = "https://cogip.github.io/simulation"
Repository = "https://github.com/cogip/simulation.git"

[project.scripts]
cogip-monitor = "cogip.tools.monitor.main:main"
cogip-replay = "cogip.tools.replay.main:main"
cogip-copilot = "cogip.tools.copilot.__main__:main"
cogip-detector = "cogip.tools.detector.__main__:main"
cogip-planner = "cogip.tools.planner.__main__:main"
cogip-beaconcam = "cogip.tools.beaconcam.main:main"
cogip-robotcam = "cogip.tools.robotcam.main:main"
cogip-server = "cogip.tools.server.__main__:main"
cogip-dashboard = "cogip.tools.dashboard.__main__:main"
cogip-lidarusb = "cogip.tools.lidarusb.main:main"
cogip-camera = "cogip.tools.camera.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

[tool.setuptools.packages.find]
include = ["cogip*"]

[tool.setuptools.package-data]
"cogip.tools.dashboard" = [
    "static/css/*",
    "static/css/purged/*",
    "static/img/*",
    "static/js/*",
    "static/js/external/*",
    "templates/*"
]
"cogip.tools.camera" = [
    "cameras/**/params.yaml"
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "submodules",
    "tests",
    "doc",
    "cogip/tools/copilot/messages",
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint.isort]
no-lines-before = ["future", "standard-library", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
